--- a/src/views/ejs/home.ejs
+++ b/src/views/ejs/home.ejs
@@ -4,6 +4,18 @@
     <link rel="stylesheet" href="/css/home.css">
 </head>
 <body>
+<form method="post" action="/users/add">
+    <label>Name</label><br>
+    <input type="text" name="user_name">
+    <br>
+    <label>Phone numberrrrrrrrrrr</label><br>
+    <input type="text" name="user_number">
+    <br>
+    <label>Email</label><br>
+    <input type="text" name="user_email">
+    <br><br>
+    <input type="submit" value="submit">
+</form>
 <div class="container">
     <div class="homeBackground"></div>
     <h1 class="homeTitle">code[pool];</h1>
